source/app_resources/jupyter-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hub
  namespace: jupyter
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/success-codes: 200,301,302
spec:
    rules:
    - http:
        paths:
          - path: /hub
            backend:
              # this will be our login username  
              serviceName: "hub"
              servicePort: 8081
